objects/User.object
<CustomObject>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__AllowMapsExports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Maps Exports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__BetaTester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maps Beta Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__DefaultLatitude__c</fullName>
        <label>Maps Default Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultLongitude__c</fullName>
        <label>Maps Default Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultProximityRadius__c</fullName>
        <label>Default Proximity Radius</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultType__c</fullName>
        <label>DefaultType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DefaultZoomLevel__c</fullName>
        <label>Maps Default Zoom Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DeviceId__c</fullName>
        <formula>&quot;MALiveAvail-&quot; + LEFT($Organization.Id, 15) + &quot;-&quot; + LEFT(Id, 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DeviceVendor__c</fullName>
        <formula>&quot;MapAnything&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EditMapsOrgWideQueries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Maps Org Wide Queries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__FinishedAdvRouteSetup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finished Maps Advanced Route Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__MapsSetting__c</fullName>
        <label>Map Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__MaxExportSize__c</fullName>
        <label>Maps Max Export Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MaxQuerySize__c</fullName>
        <label>Maps Max Query Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__PreferredTypeOfMeasurement__c</fullName>
        <label>Preferred Type of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Miles</fullName>
                </value>
                <value>
                    <fullName>Km</fullName>
                </value>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Yards</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__ReceiveBatchExceptionEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED</description>
        <label>Receive Batch Exception Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__TPApprover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Territory Planning Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__TPPublisher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Territory Planning Publisher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__TestUserLookup__c</fullName>
        <description>For blueline bug.</description>
        <label>TestUserLookup</label>
        <relationshipName>TestChildLookup</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>maps__Version__c</fullName>
        <label>Maps Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Previous</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>greaterThan</operation>
            <value>5/31/2022 12:00 AM</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Admin</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>PSP_Farmers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>PSP Farmer Customer Community</value>
        </filters>
        <label>PSP Farmers</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PSP_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>PSP</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>PSP Farmer Customer Community</value>
        </filters>
        <label>Internal PSP Users</label>
        <sharedTo>
            <group>PSP_Users</group>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RSAActiveAgents</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>CDFA A</value>
        </filters>
        <label>RSA Agents</label>
    </listViews>
    <listViews>
        <fullName>RSAActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>CDFA Comm</value>
        </filters>
        <label>RSA Contacts</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Check_Community_User_for_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  OR($Profile.Name = &apos;PSP Farmer Customer Community&apos; , $Profile.Name = &apos;CDFA Community Login User&apos; ,$Profile.Name = &apos;CDFA Agent Community Login User&apos;),
NOT(ISNEW())
)</errorConditionFormula>
        <errorMessage>Portal users are not allowed edit their profile.</errorMessage>
    </validationRules>
</CustomObject>